Fix mobile margins & 1px horizontal scroll

--- a/static/style4/menu.css
+++ b/static/style4/menu.css
@@ -113,6 +113,7 @@ body.mobile_screen {
 	#station_select_container, #station_select_container.open {
 		float: none;
 		width: 100%;
+		border: none;
 	}
 }
 
